---------------------------------------------------------------------------------------------------
Version: 0.15.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.15.1
Date: 2022-12-23
  Bugfixes:
    - Actually include the new GUI in the packaged mod...
---------------------------------------------------------------------------------------------------
Version: 0.15.0
Date: 2022-12-23
  Changes:
    - Rehauled the GUI.
  Minor Features:
    - Nothing important
---------------------------------------------------------------------------------------------------
Version: 0.14.7
Date: 2022-12-13
  Bugfixes:
    - Fix error when overbuilding an underground preview entity.
---------------------------------------------------------------------------------------------------
Version: 0.14.6
Date: 2022-12-13
  Bugfixes:
    - Fix issues with assembling machines being rotated via blueprint pasting.
    - Fix startup crash with modded entities having very large selection boxes.
---------------------------------------------------------------------------------------------------
Version: 0.14.5
Date: 2022-12-09
  Bugfixes:
    - Fix update when dropping modules in machines
---------------------------------------------------------------------------------------------------
Version: 0.14.4
Date: 2022-12-05
  Features:
    - Added a force-delete entity button to error entities.
  Changes:
    - Increased size of train-previews to make them easier to select.
  Bugfixes:
    - Fix creating entities when there are items on the ground.
---------------------------------------------------------------------------------------------------
Version: 0.14.3
Date: 2022-11-13
  Bugfixes:
    - Fix rotating loader entities
    - Fix migration of previews for rolling stock from previous versions
---------------------------------------------------------------------------------------------------
Version: 0.14.2